# PFinalMH

./: .gitignore
.cache/clangd/index/: cec17.c.5011A31CE4EBF07A.idx  cec17.h.814B97A14B110B5A.idx  cec17_test_func.c.D1E97DE9D8D655ED.idx  explotacion.cpp.FEB427D835E3EC1F.idx  explotacion.h.1C8A64AD5B05DEDB.idx  gwo_lib.cpp.BB74E1BC5F3554CD.idx  gwo_lib.h.B2B5CA8280782A34.idx  gwo_main.cc.EFB60F9C4C903432.idx  program_parser.cpp.465F77173CCD2017.idx  program_parser.h.B352EEF3944BF4D4.idx  test.cc.7BD71420889293D5.idx  testrandom.cc.959104A15F74BF3D.idx  testsolis.cc.CB84D6440C57E229.idx
code/: .clang-format  CMakeLists.txt  Presentacion.md  extract.py  extract_all.py  genera_medias.py  gwo  media_10.xlsx  media_30.xlsx  media_50.xlsx  modifica_tablas.py  results_a_mezclar.xlsx  solis.py  test  testrandom  testsolis
code/.cache/clangd/index/: cec17.c.5011A31CE4EBF07A.idx  cec17.h.814B97A14B110B5A.idx  cec17_test_func.c.D1E97DE9D8D655ED.idx  explotacion.cpp.FEB427D835E3EC1F.idx  explotacion.h.1C8A64AD5B05DEDB.idx  gwo_lib.cpp.BB74E1BC5F3554CD.idx  gwo_lib.h.B2B5CA8280782A34.idx  gwo_main.cc.EFB60F9C4C903432.idx  program_parser.cpp.465F77173CCD2017.idx  random.hpp.A46B9945BE19F5AA.idx  test.cc.7BD71420889293D5.idx  testrandom.cc.959104A15F74BF3D.idx  testsolis.cc.CB84D6440C57E229.idx
code/Memoria/: mem.tex
code/Memoria/Resultados/basico/d30/: .~lock.results_mean.xlsx#
code/Memoria/Resultados/hibrido/Externo/D10/: .~lock.results_mean.xlsx#
code/include/: explotacion.h  gwo_lib.h  program_parser.h  random.hpp
code/results_gwo/: results_10_10.txt  results_11_10.txt  results_12_10.txt  results_13_10.txt  results_14_10.txt  results_15_10.txt  results_16_10.txt  results_17_10.txt  results_18_10.txt  results_19_10.txt  results_1_10.txt  results_20_10.txt  results_21_10.txt  results_22_10.txt  results_23_10.txt  results_24_10.txt  results_25_10.txt  results_26_10.txt  results_27_10.txt  results_28_10.txt  results_29_10.txt  results_2_10.txt  results_30_10.txt  results_3_10.txt  results_4_10.txt  results_5_10.txt  results_6_10.txt  results_7_10.txt  results_8_10.txt  results_9_10.txt  results_cec2017_10.xlsx
code/src/: busquedaLocal.cpp  cec17.c  cec17_test_func.c  explotacion.cpp  gwo_lib.cpp  gwo_main.cc  program_parser.cpp  test.cc  testrandom.cc  testsolis.cc
code/wrappers/: cec17.py
